data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4205.wast
;; 4. **Test Description**: Ensure that `call_indirect` within a `loop` correctly processes a valid function index, but handles operand stack underflow, resulting in a trap.    - *Constraint Checked*: Operand stack handling and conformity.    - *Infinite Loop Context*: Operand underflow must result in a trap, preventing infinite looping.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (func $callee (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (elem (i32.const 0) $callee)
    (func (result i32)
      (loop $loop
        (call_indirect (type $sig) (i32.const 0))
        (br $loop)
      )
    )
  )
  "type mismatch: expected 1 operand on stack but have none"
)